# VS_Code_Remote_Debug_wxWidget

./: CMakeLists.txt  HelloWorldApp.h  main.cpp
